modified chinese translation

--- a/_data/ui-text.yml
+++ b/_data/ui-text.yml
@@ -434,8 +434,8 @@ zh-TW: &DEFAULT_ZH_HANT
   skip_content               : "轉至内容"
   skip_footer                : "轉至頁尾"
   page                       : "頁面"
-  pagination_previous        : "前一頁"
-  pagination_next            : "後一頁"
+  pagination_previous        : "上一頁"
+  pagination_next            : "下一頁"
   breadcrumb_home_label      : "首頁"
   breadcrumb_separator       : "/"
   menu_label                 : "切換選單"
