--- a/_config.yml
+++ b/_config.yml
@@ -279,5 +279,6 @@ defaults:
       related: true
       show_date: true
       toc: true
+      toc_sticky: true
       toc_label: "Content"
       toc_icon: "book-open"
